Fix google analytics on template

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -21,7 +21,7 @@
     {{ end -}}
 
     {{- if not hugo.IsServer -}}
-        {{- partial "googleanalytics.html" . -}}
+        {{ template "_internal/google_analytics.html" . }}
     {{- end -}}
 
     {{ if .Params.noindex -}}
